# cobweb

./: .cursorrules  .gitignore  README.md
.github/workflows/: pc-build.yml
auth/: Cargo.toml
common/: Cargo.toml
control/: Cargo.toml
control/src/: audio.rs  lib.rs  media.rs  system.rs
discovery/: Cargo.toml
docs/: web-control-api.md
scheduler/: Cargo.toml
scheduler/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
share/: Cargo.toml
storage/: Cargo.toml
transport/: Cargo.toml
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.vue  main.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: clipboard_sync.rs  features.rs  flydigi_battery.rs  lib.rs  logitech_hidpp.rs  main.rs  peripheral_battery.rs  peripherals.rs  royal_kludge_battery.rs  scheduler.rs  store.rs
ui/src-tauri/src/network/: mdns.rs  server.rs
ui/src/components/: LogoLoading.vue  PairDialog.vue  SessionNotice.vue
ui/src/components/feedback/: AppConfirmHost.vue  AppFeedbackHost.vue  AppToastHost.vue
ui/src/components/layout/: Navbar.vue
ui/src/components/settings/: SettingsOverlay.vue
ui/src/composables/: use-updater.ts  useConfirm.ts  useNotice.ts  useToast.ts
ui/src/lib/: theme.ts
ui/src/router/: index.ts
ui/src/views/apple-music/: index.vue
ui/src/views/audio-routing/: index.vue
ui/src/views/clipboard-sync/: index.vue  types.ts
web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.vue  api.ts  types.ts  useTheme.ts  useWebConsole.ts
web/src/components/: ActionIconButton.vue  AppConfirmDialog.vue  AppToast.vue  ConnectionStatusCard.vue  FeatureActionCard.vue  MediaPlayerCard.vue
web/src/composables/: useConfirmDialog.ts
web/src/lib/: buttonIcons.ts  featureIcons.ts
web/src/styles/: app.css
(+21 files in other folders)
