[package]
name = "cobweb-control"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Devices_FunctionDiscovery",
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Input_KeyboardAndMouse",
] }
