[package]
name = "cobweb"
version = "0.1.0"
description = "Cobweb desktop app"
authors = ["bigbiglv"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cobweb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
if-addrs = "0.13"
mac_address = "1.1"
mdns-sd = "0.13"
uuid = { version = "1.8", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
lazy_static = "1.4"
reqwest = { version = "0.13.2", features = ["json"] }
cobweb-service = { path = "../../service" }
cobweb-scheduler = { path = "../../scheduler" }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2.6.5", default-features = false, features = ["windows-native"] }
winreg = "0.52"
